--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 
     <div class="row">
         <div class="col-md-12">
+
+            <!-- id that is passed to the plugin, id="list_grid" -->
             <div id="list_grid">
                 <div class="row">
                     <div class="col-md-12">
-                        <div name="_dsSearch"></div>
                         <div class="form-group">
                             <label class="control-label">Search</label>
+
+                            <!-- input search, name="_dsSearch" -->
                             <input class="form-control" name="_dsSearch">
                         </div>
 
@@ -53,11 +56,15 @@
 
                 <div class="row border-bottom">
                     <div class="col-md-6">
+
+                        <!-- It shows the total records, name="_dsTotais" -->
                         <div name="_dsTotais" class="total"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group pull-right">
                             <label class="control-label">Sort by</label>
+
+                            <!-- select order, name="_dsOrder" -->
                             <select class="form-control" name="_dsOrder">
                                 <option value="">Select</option>
                                 <option value="ASC">a-z</option>
@@ -73,6 +80,8 @@
                             <div class="col-md-4">
                                 <div class="form-group pull-left">
                                     <label class="control-label">Display</label>
+
+                                    <!-- select records per page, name="_dsRecords" -->
                                     <select class="form-control" name="_dsRecords">
                                         <option value="9">9</option>
                                         <option value="18">18</option>
@@ -83,6 +92,8 @@
                             </div>
                             <div class="col-md-8">
                                 <nav>
+
+                                    <!-- ul pagination, name="_dsPagination" -->
                                     <ul class="pagination pull-right" name="_dsPagination"></ul>
                                 </nav>
                             </div>
@@ -90,8 +101,10 @@
                     </div>
                 </div>
 
+                <!-- list box that is handled in the constructor function, id="grid" -->
                 <div id="grid" class="box_list"></div>
 
+                <!-- box not found, it is handled in not_found function. id="not_found" -->
                 <div class="row not_found" id="not_found">
                     <div class="col-md-12">
                         <h1>No products were found.</h1>
@@ -100,11 +113,15 @@
 
                 <div class="row border-bottom">
                     <div class="col-md-6">
+
+                        <!-- It shows the total records, name="_dsTotais" -->
                         <div name="_dsTotais" class="total"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group pull-right">
                             <label class="control-label">Sort by</label>
+
+                            <!-- select order, name="_dsOrder" -->
                             <select class="form-control" name="_dsOrder">
                                 <option value="">Select</option>
                                 <option value="ASC">a-z</option>
@@ -120,6 +137,8 @@
                             <div class="col-md-4">
                                 <div class="form-group pull-left">
                                     <label class="control-label">Display</label>
+
+                                    <!-- select records per page, name="_dsRecords" -->
                                     <select class="form-control" name="_dsRecords">
                                         <option value="9">9</option>
                                         <option value="18">18</option>
@@ -129,6 +148,8 @@
                                 </div>
                             </div>
                             <div class="col-md-8">
+
+                                <!-- ul pagination, name="_dsPagination" -->
                                 <ul class="pagination pull-right" name="_dsPagination"></ul>
                             </div>
                         </div>
@@ -160,22 +181,22 @@
             $.each(data, function (index, value) {
                 html.push('<div class="col-md-4 col-sm-6 col-xs-12 produto">');
 
-                html.push('<a href="javascript:;">');
-                html.push('<div class="hover">');
-                html.push('<div class="img">');
-                html.push('<img src="http://php.developscript.com/jquery_dsdatatablegrid/img/' + value['id'] + '.png" />');
-                html.push('</div>');
-                html.push('<div class="desc">');
-                html.push('<h3>' + value['name'] + '</h3>');
-                html.push('</div>');
-                html.push('<div class="price">');
-                html.push('<h3>$ ' + value['price'] + '</h3>');
-                html.push('</div>');
-                html.push('</div>');
-                html.push('<div class="link">');
-                html.push('<span class="btn btn-primary btn-ver">Ver</span>');
-                html.push('</div>');
-                html.push('</a>');
+                    html.push('<a href="javascript:;">');
+                        html.push('<div class="hover">');
+                            html.push('<div class="img">');
+                                html.push('<img src="http://php.developscript.com/jquery_dsdatatablegrid/img/' + value['id'] + '.png" />');
+                            html.push('</div>');
+                            html.push('<div class="desc">');
+                                html.push('<h3>' + value['name'] + '</h3>');
+                            html.push('</div>');
+                            html.push('<div class="price">');
+                                html.push('<h3>$ ' + value['price'] + '</h3>');
+                            html.push('</div>');
+                        html.push('</div>');
+                        html.push('<div class="link">');
+                            html.push('<span class="btn btn-primary btn-ver">Ver</span>');
+                        html.push('</div>');
+                    html.push('</a>');
 
                 html.push('</div>')
             });
