--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
 <p>_dsDataTableGrid is a plugin for <a href="//jquery.com">jQuery</a> that works with AJAX requests. With some setting you build a dynamic grid, ideal for catalog products.</p>
 
-<h3>
-<a id="exemple" class="anchor" href="#exemple" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://developscript.github.io/jQuery_dsDataTableGrid/">Exemple...</a>
-</h3>
+<h1>Click <a href="exemple.html" target="_blank">HERE</a> for a live example.</h1>
 
 <h2>
 <a id="having-support" class="anchor" href="#having-support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Having support</h2>
